# check_macos_updates

./: Cargo.toml  LICENSE  README.md  deny.toml
src/: lib.rs  main.rs
tests/: check-macos-updates.rs  check_macos_updates.rs  cli.rs  plist_examples.rs
