[package]
name = "check-macos-updates"
version = "0.1.4"
edition = "2021"
authors = ["Johan Thorén <johan@thoren.xyz>"]
description = "A Nagios compatible plugin to check if macOS system updates are available."
readme = "README.md"
license = "ISC"
repository = "https://github.com/johanthoren/check_macos_updates"

[lib]
path = "src/lib.rs"

[[bin]]
name = "check_macos_updates"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
plist = "1.4.3"
psutil = "3.2.2"
serde = { version = "1.0.162", features = ["derive"] }
