[package]
name = "check-macos-updates"
version = "0.3.5"
edition = "2021"
authors = ["Johan Thorén <johan@thoren.xyz>"]
description = "A monitoring plugin to check if macOS system updates are available."
readme = "README.md"
license = "ISC"
repository = "https://github.com/johanthoren/check_macos_updates"

[lib]
path = "src/lib.rs"

[[bin]]
name = "check_macos_updates"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
nagios-range = "0.2.5"
plist = "1.7.0"
psutil = "3.3.0"
serde = { version = "1.0.209", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.12.0"
